# Ai-ATL-25

./: .gitignore  AGENTS.md  aiatlsorter.py  package-lock.json  sortbyzip
backend/: Cargo.toml  JustFile  README.md  example.json  personas.json
backend/migrations/: 001_create_parcels_table.sql
backend/src/: azure.rs  constituents.rs  handlers.rs  main.rs  neighborhoods.rs  types.rs  utils.rs
data/: Cleaned_Demographics_Data.geojson  Official_Neighborhoods_with_Current_Demographic_Data_(2024).geojson  Raw_Demographic_Data.geojson  example.json  sample-geojson.json
frontend/: .env.example  package-lock.json  package.json  start-dev.sh
frontend/public/: agents-mapping.json
frontend/public/geojson/: counties.geojson  inverted_mask3.geojson  neighborhoods.geojson  neighborhoodsMask.geojson
frontend/public/results/: housing.json  park.json  rail.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/charts/: BarChart.tsx  DoughnutChart.tsx  DualBarChart.tsx  GaugeChart.tsx  LineChart.tsx  RadarChart.tsx  SegmentedBar.tsx
frontend/src/components/layout/: AppHeader.tsx  LandingNav.tsx
frontend/src/components/map/: AtlantaMap.tsx  CursorFollower.tsx  DragSelection.tsx  EventBlinkAnimation.tsx  EventMarkers.tsx  GeoJsonLayers.tsx  LoadingAnimation.tsx  MapContent.tsx  NeighborhoodMask.tsx  RoadLoadingAnimation.tsx
frontend/src/components/panels/: AnalyzingNotification.tsx  CommandPanel.tsx  ConstituentCallModal.tsx  DataPanel.tsx  (+3 more)
frontend/src/hooks/: useZoneDataInitializer.ts
frontend/src/lib/: eventColors.ts  eventNeighborhoodUtils.ts  geoBounds.ts
frontend/src/routes/: __root.tsx  app.tsx  index.tsx
frontend/src/services/: agentsApi.ts  geojsonApi.ts  mockSimulationApi.ts  simulationApi.ts
frontend/src/stores/: simulationStore.ts
frontend/src/types/: geojson.d.ts
scripts /: remove_coordinates.py
src/: styles.css
src/components/: Header.tsx
src/components/map/: AtlantaMap.tsx  GeoJsonLayers.tsx
src/components/panels/: CommandPanel.tsx
src/routes/: dashboard.tsx  index.tsx
src/stores/: simulationStore.ts
(+1 files in other folders)
