[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dotenv = "0.15.0"
tokio = { version = "1", features = ["time"] }

[profile.release]
# Optimize for both size and speed
opt-level = 3
# Link-time optimization for maximum performance and smaller binaries
lto = "fat"
# Single codegen unit for better optimization
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true
# Use abort on panic instead of unwinding (smaller binary)
panic = "abort"
